--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha -r ts-node/register '**/__tests__/**/*.ts'",
     "build": "rimraf _dist && npx tsc",
     "prestart": "npm run build",
     "start": "node _dist/index.js",
@@ -27,12 +27,16 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/chai": "^4.3.5",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/mocha": "^10.0.1",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.3.2",
+    "chai": "^4.3.7",
     "concurrently": "^8.2.0",
+    "mocha": "^10.2.0",
     "nodemon": "^2.0.22",
-    "typescript": "^5.1.3"
+    "ts-node": "^10.9.1"
   }
 }
