--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "chai-http": "^4.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -23,7 +24,9 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.1",
     "rimraf": "^5.0.1",
-    "socket.io": "^4.7.0"
+    "socket.io": "^4.7.0",
+    "super": "^0.2.3",
+    "test": "^3.3.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -33,10 +36,12 @@
     "@types/mocha": "^10.0.1",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.3.2",
+    "@types/supertest": "^2.0.12",
     "chai": "^4.3.7",
     "concurrently": "^8.2.0",
     "mocha": "^10.2.0",
     "nodemon": "^2.0.22",
+    "supertest": "^6.3.3",
     "ts-node": "^10.9.1"
   }
 }
