--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha -r ts-node/register '**/__tests__/**/*.ts'",
+    "preseed": "npm run build",
+    "seed": "node _dist/seeds/seed.js",
     "build": "rimraf _dist && npx tsc",
     "prestart": "npm run build",
     "start": "node _dist/index.js",
