--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/websocket": "^1.0.5",
     "bcrypt": "^5.1.0",
     "chai-http": "^4.4.0",
     "cors": "^2.8.5",
