--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server/index.js",
   "scripts": {
     "test:server": "cd server && npm run test",
-    "dev": "concurrently \"cd server && npm run dev\" \"cd ../client && npm run start\"",
+    "dev": "concurrently \"cd server && npm run dev\" \"cd client && npm run dev\"",
     "seed": "cd server && npm run seed"
   },
   "repository": {
