--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react-redux": "^7.1.25",
+    "@types/socket.io": "^3.0.2",
+    "@types/websocket": "^1.0.5",
     "axios": "^1.4.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
