--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,10 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
+    "react-type-animation": "^3.1.0",
     "redux": "^4.2.1",
     "socket.io-client": "^4.7.1"
   },
