--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "",
   "main": "server/index.js",
   "scripts": {
+    "prestart": "cd server && npm run build",
+    "start": "node server/_dist/index.js",
     "test:server": "cd server && npm run test",
     "dev": "concurrently \"cd server && npm run dev\" \"cd client && npm run dev\"",
+    "install": "cd server && npm i && cd ../client && npm i",
+    "build": "cd client && npm run build",
     "seed": "cd server && npm run seed"
   },
   "repository": {
