--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "concurrently \"cd server && npm run dev\" \"cd client && npm run dev\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "build": "cd server && npm run build ",
+    "postinstall": "npm run build",
     "seed": "cd server && npm run seed"
   },
   "repository": {
@@ -21,10 +22,8 @@
     "url": "https://github.com/Kam-Mivehchi/QuickChat/issues"
   },
   "homepage": "https://github.com/Kam-Mivehchi/QuickChat#readme",
-  "dependencies": {
-    "dayjs": "^1.11.9"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "typescript": "^5.1.6"
+    "concurrently": "^8.2.0"
   }
 }
