--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,7 @@
     "test": "mocha -r ts-node/register '**/__tests__/**/*.ts'",
     "preseed": "npm run build",
     "seed": "node _dist/seeds/seed.js",
-    "build": "rimraf _dist && typescript",
+    "build": "rimraf _dist && npx tsc",
     "start": "node _dist/index.js",
     "predev": "npm run build",
     "dev": "concurrently \"tsc -w\" \"nodemon _dist/index.js\""
@@ -33,7 +33,8 @@
     "rimraf": "^5.0.1",
     "socket.io": "^4.7.0",
     "super": "^0.2.3",
-    "test": "^3.3.0"
+    "test": "^3.3.0",
+    "typescript": "^5.1.6"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
