--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,9 @@
     "test": "mocha -r ts-node/register '**/__tests__/**/*.ts'",
     "preseed": "npm run build",
     "seed": "node _dist/seeds/seed.js",
-    "build": "rimraf _dist && typescript",
+    "build": "rimraf _dist && tsc",
     "start": "node _dist/index.js",
+    "postinstall": "npm run build",
     "predev": "npm run build",
     "dev": "concurrently \"tsc -w\" \"nodemon _dist/index.js\""
   },
