--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -26,7 +26,8 @@
       "node"
     ],
     "typeRoots": [
-      "./node_modules/@types"
+      "./node_modules/@types",
+      "./node_modules"
     ]
   },
   "include": [
